Update WebKit(Safari 7.0.6 (9537.78.2))

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <thead>
       <tr>
         <th scope="col">Test</th>
-        <th scope="col" title="Safari 7.0.2 (9537.74.9)">WebKit</th>
+        <th scope="col" title="Safari 7.0.6 (9537.78.2)">WebKit</th>
         <th scope="col" title="Chrome 38.0.2125.104">Blink</th>
         <th scope="col" title="Firefox 33.0.1">Gecko</th>
         <th scope="col" title="IE10">Trident</th>
@@ -24,7 +24,7 @@
     <tbody>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/FormData-append.html">FormData-append.html</a></td>
-        <td class="webkit fail"><a href="about:blank">Fail</a></td>
+        <td class="webkit pass">Pass</td>
         <td class="blink pass"><a title="[XHR] abort() should not fire progress event named abort when readyState === 4" href="https://code.google.com/p/chromium/issues/detail?id=315470">Pass</a></td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
@@ -789,7 +789,7 @@
       </tr>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/responsexml-non-document-types.htm">responsexml-non-document-types.htm</a></td>
-        <td class="webkit fail"><a href="about:blank">Fail</a></td>
+        <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="blink pass">Pass</td>
         <td class="gecko fail"><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=707484" title="[XHR2] Allow setting XHR responseType and withCredentials before open">707484</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
@@ -1365,7 +1365,7 @@
       </tr>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/setrequestheader-open-setrequestheader.htm">setrequestheader-open-setrequestheader.htm</a></td>
-        <td class="webkit fail"><a href="about:blank">Fail</a></td>
+        <td class="webkit pass">Pass</td>
         <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
