Add missing test results

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
       </tr>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/progress-events-response-data-gzip.htm">progress-events-response-data-gzip.htm</a></td>
-        <td class="webkit"></td>
+        <td class="webkit fail">Fail</td>
         <td class="blink pass">Pass</td>
         <td class="gecko fail">Fail</td>
         <td class="trident fail">Fail</td>
@@ -1221,7 +1221,7 @@
       </tr>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/send-sync-blocks-async.htm">send-sync-blocks-async.htm</a></td>
-        <td class="webkit "></td>
+        <td class="webkit pass">Pass</td>
         <td class="blink pass">Pass</td>
         <td class="gecko fail">Fail</td>
         <td class="trident fail">Fail</td>
@@ -1482,7 +1482,7 @@
       </tr>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/xmlhttprequest-timeout-aborted.html">xmlhttprequest-timeout-aborted.html*</a></td>
-        <td class="webkit notperformed">-</td>
+        <td class="webkit pass">Pass</td>
         <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
