results for two new TCs

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <td class="gecko fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td>-</td>
+        <td>Related: https://www.w3.org/Bugs/Public/show_bug.cgi?id=14813</td>
       </tr>
       <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/open-after-abort.htm">open-after-abort.htm</a></td>
@@ -977,12 +977,30 @@
         <td>-</td>
       </tr>
       <tr>
+        <td><a href="http://w3c-test.org/XMLHttpRequest/send-data-es-object.htm">send-data-es-object.htm</a></td>
+        <td class="webkit"></td>
+        <td class="blink pass">Pass</td>
+        <td class="gecko fail">Fail</td>
+        <td class="trident pass">Pass</td>
+        <td class="presto pass">Pass</td>
+        <td>-</td>
+      </tr>
+      <tr>
         <td><a href="http://w3c-test.org/XMLHttpRequest/send-data-formdata.htm">send-data-formdata.htm</a></td>
         <td class="webkit pass">Pass</td>
         <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td><a href="http://w3c-test.org/XMLHttpRequest/send-data-unexpected-tostring.htm">send-data-unexpected-tostring.htm</a></td>
+        <td class="webkit"></td>
+        <td class="blink pass">Pass</td>
+        <td class="gecko fail">Fail</td>
+        <td class="trident pass">Pass</td>
+        <td class="presto fail">Fail (partial)</td>
         <td>-</td>
       </tr>
       <tr>
